# ops_reach

./: .zenodo.json  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/: pull_request_template.md
.github/workflows/: main.yml
ops_reach/: __init__.py
ops_reach/instruments/: aero_reach.py
ops_reach/instruments/methods/: pod_serial_numbers.csv  reach.py
ops_reach/tests/: __init__.py
scripts/: check_files.py  netcdf_gen.py
