[metadata]
name = ops_reach
version = file: ops_reach/version.txt
url = https://github.com/jklenzing/ops_reach
author = Jeff Klenzing
author_email = jeffrey.klenzing@nasa.gov
description = 'Scientific Operations support for REACH datasets'
keywords =
  reach
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Atmospheric Science
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  numpy
  pandas
  pysat

[coverage:report]
omit =
  */instruments/templates/

[flake8]
max-line-length = 90
ignore =
  D200
  D202
  W503

[tool:pytest]
markers =
    all_inst: tests all instruments
    download: tests for downloadable instruments
    load_options: tests for instruments with additional options
    no_download: tests for instruments without download support
    first: first tests to run
    second: second tests to run
